--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
+  --sidebar: #E1E5E2;
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
   --sidebar-primary-foreground: oklch(0.985 0 0);
@@ -103,7 +103,7 @@
   --chart-3: oklch(0.769 0.188 70.08);
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.205 0 0);
+  --sidebar: #282928;
   --sidebar-foreground: oklch(0.985 0 0);
   --sidebar-primary: oklch(0.488 0.243 264.376);
   --sidebar-primary-foreground: oklch(0.985 0 0);
@@ -119,5 +119,17 @@
   }
   body {
     @apply bg-background text-foreground;
+
   }
+}
+
+.notch-shape {
+  clip-path: polygon(
+    0% 0%,
+    25% 100%,
+    75% 100%,
+    100% 0%
+  );
+  border-bottom-left-radius: 18px;
+  border-bottom-right-radius: 18px;
 }
